NewArchive/9cf69bc490db2091e448fb4a66c75ca1-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:8:26: error: invalid type argument of unary ‘*’ (have ‘bool’)
     std::cout << *(p || q) << std::endl;
                          ^
